# rQuery

./: .gitignore  README.md  duckdb_predictive_agent_finetune_spec.txt  duckdb_predictive_agent_spec.txt  environment.finetune.yml  environment.local-inference.yml  environment.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: critic.py  evidence.py  explorer.py  planner.py  predictor.py  prompt_builder.py  prompts.py
backend/app/api/: databases.py  predictions.py
backend/app/db/: metadata.py  models.py
backend/app/duckdb_tools/: connector.py  profiler.py  sql_safety.py
backend/app/llm/: client.py  config_loader.py  local_runtime.py
backend/app/memory/: store.py
backend/app/schemas/: common.py  database.py  prediction.py  profile.py
backend/app/services/: databases.py  predictions.py  uploads.py
backend/app/training/: adapter_trainer.py  benchmark_loader.py  config.py  engine.py  evaluator.py  (+5 more)
backend/tests/: test_adapter_trainer_plan.py  test_finetune_loop.py  test_llm_config.py  test_local_model_resolution.py  test_local_runtime.py  test_memory.py  test_profiler.py  test_relbench_inference.py  test_role_dataset_builder.py  test_sql_safety.py
config/: llm_config.example.json  llm_config.json
config/training/: relbench_finetune_config.example.json
docs/: ENVIRONMENT.md  FINETUNE_ENVIRONMENT.md  implementation_book.tex
finetuned_llm/: README.md
frontend/: streamlit_app.py
sample_data/: ecommerce.duckdb
scripts/: create_sample_dbs.py  run_adapter_training.py  run_finetune_loop.py  run_relbench_inference.py
(+1 files in other folders)
